# visual-db-order-lookup

./: .env.example  .gitignore  CLAUDE.md  PROJECT_STRUCTURE.md  README.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  visual-order-lookup.spec
.specify/memory/: constitution.md
docs/fixes/: PAGINATION_FIX.md  SEARCH_FIX_SUMMARY.md
docs/migration/: API_SPECIFICATION.yaml  DATABASE_SCHEMA_REFERENCE.md  EXPRESS_MIGRATION_GUIDE.md  QUICKSTART.md  README.md  TYPESCRIPT_INTERFACES.ts
docs/research/: BOM_SCHEMA_RESEARCH_REPORT.md  INVENTORY_QUICK_REFERENCE.md  INVENTORY_SCHEMA_RESEARCH_REPORT.md
docs/web-conversion/: 01-backend-architecture.md  02-database-layer.md  03-api-endpoints.md  04-data-models.md  05-service-layer.md  06-error-handling.md  07-implementation-roadmap.md  08-step-by-step-implementation.md  README.md
specs/001-visual-order-lookup/: data-model.md  phase2-advanced-search-plan.md  plan.md  quickstart.md  research-gui-redesign.md  research.md  spec.md  tasks-report-fixes.md  tasks.md
specs/002-inventory-where-used-enhancement/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/main/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
tests/fixtures/: mock_customers.json  mock_orders.json
tests/integration/: test_engineering_module.py  test_inventory_module.py  test_module_switching.py
tests/scripts/: test_inventory_search.py  test_pagination.py  test_search_fixes.py
tests/unit/: __init__.py  test_bom_service.py  test_navigation_panel.py
visual_order_lookup/: __init__.py  main.py
visual_order_lookup/database/: __init__.py  connection.py  models.py  part_queries.py  queries.py
visual_order_lookup/ui/: dialogs.py  (+13 more)
(+31 files in other folders)
